fix button alignment

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -33,10 +33,11 @@ body {
 
 .nav-items {
 	vertical-align: bottom;
+  float: right;
+  margin-top: 20px;
 	.mui-btn {
 		margin: 0;
     font-size: 12px;
-float: right;
 height: 30px;
 border-radius: 0px;
 line-height: 30px;
